--- a/_layouts/unterthema.html
+++ b/_layouts/unterthema.html
@@ -31,7 +31,7 @@ hide_hero: true
                     <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
                     {% for p in site.pages %}
                     {% if p.themacontent contains page.themacontent and p.layout contains 'idee' %}
-                        <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
+                        <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser idea">
                             {% include idea-teaser-tile.html post=p %}
                         </div>
                     {% endif %}
