--- a/_layouts/thema.html
+++ b/_layouts/thema.html
@@ -24,7 +24,7 @@ hide_hero: true
             </div>
 
             <div class="container">
-                <div class="isotope-wrap sub-material-back">
+                <div class="isotope-wrap">
                     <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
                     {% for p in site.pages %}
                     {% if p.thema contains page.thema and p.layout contains 'unterthema' %}
