fixed some merge problems

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -425,7 +425,7 @@ label {
   }
   #teaser-oer-page {
     a{
-      color: $blue;
+      color: #0A00FF;
       //text-decoration: underline;
     }
     a:hover{
