--- a/_includes/content-infobox.liquid
+++ b/_includes/content-infobox.liquid
@@ -1,4 +1,7 @@
-<div class="content-element infobox {{ include.float }}">
-    <h3 class="infobox-headline">{{ include.headline }}</h3>
+<div class="content-element infobox {{ include.float }} {{ include.border }}" style="width:{{ include.width }};">
+    {% if infobox-headline != "" %}
+        <h3 class="infobox-headline">{{ include.headline }}</h3>
+    {% endif %}
     <p class="infobox-copy">{{ include.copy }}</p>
 </div>
+
