--- a/_sass/_contentpage-elements.scss
+++ b/_sass/_contentpage-elements.scss
@@ -63,6 +63,7 @@ contentpage elements
       margin-bottom: 45px;
     }
     &.yes{
+      text-align: center;
       border-style: dotted;
       border-color: $blue;
       background-color: white;
