--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -447,7 +447,14 @@ label {
         line-height: 1.6em;
     }
   }
-
+  tr{
+    td{
+        font-size: 18px;
+        margin: 20px ;
+        padding: 10px;
+        line-height: 1.6em;
+    }
+  }
 }
 
 
