--- a/_sass/_contentpage-elements.scss
+++ b/_sass/_contentpage-elements.scss
@@ -112,6 +112,7 @@ contentpage elements
   position: relative;
   padding-bottom: 56.25%;
   padding-top: 30px;
+  margin-top: 20px;
   height: 0;
 
   iframe {
