--- a/_layouts/untertool.html
+++ b/_layouts/untertool.html
@@ -11,6 +11,17 @@ hide_hero: true
             <div class="container">
                 <div class="col-lg-10 col-lg-offset-1">
                     <div class="page-sub-material"><a href="javascript:history.back()"><p class="sub-material-arrow-back"><img src="/static/img/arrow.svg"> Zurück</p></a></div>
+                    {% assign flag = false %}
+                    {% for p in site.pages %}
+                    {% if p.subtool contains page.subtool and p.layout contains 'idee' %}
+                    {% assign flag = true %}
+                    {% endif %}
+                    {% endfor %}
+                    {% if flag == true %}
+
+                    <p>💡 Teste das hier beschriebene Tool direkt und starte dein eigenes Projekt.<a href="#projektideen"> Hier findest du passende Projektideen</a></p>
+                    <hr>
+                    {% endif %}
                     <h1 class="section-headline">{{ page.title }}</h1>
                     <p>
                       {{ content }}
@@ -23,7 +34,7 @@ hide_hero: true
                     {% endfor %}
                     {% if flag == true %}
                         <hr>
-                        <h2>Projektideen</h2>
+                        <h2 id="projektideen">Projektideen</h2>
                     {% endif %}
                 </div>
             </div>
