--- a/_layouts/idee.html
+++ b/_layouts/idee.html
@@ -11,12 +11,23 @@ hide_hero: true
             <div class="container">
                 <div class="col-lg-10 col-lg-offset-1">
                     <div class="page-sub-material"><a href="javascript:history.back()"><p class="sub-material-arrow-back"><img src="/static/img/arrow.svg"> Zurück</p></a></div>
+                    {% assign flag = false %}
+                    {% for p in site.pages %}
+                    {% if p.subtool contains page.subtool and p.layout contains 'idee' %}
+                    {% assign flag = true %}
+                    {% endif %}
+                    {% endfor %}
+                    {% if flag == true %}
+
+                    <p>💡 Diese Projektidee ist ein Beispiel dafür, wie du ein Thema mit Hilfe eines Tools angehen kannst.<a href="#projektideen"> Mit der folgenden Idee setzt du diese Themen und Tools um.</a></p>
+                    <hr>
+                    {% endif %}
                     <h1 class="section-headline">{{ page.title }}</h1>
                     <p>
                       {{ content }}
                     </p>
                     <hr>
-                    <h2>Folgende Themen und Tools sind mit dieser Idee verbunden</h2>
+                    <h2 id="projektideen">Folgende Themen und Tools sind mit dieser Idee verbunden</h2>
                 </div>
             </div>
             <div class="container">
