--- a/_layouts/idee.html
+++ b/_layouts/idee.html
@@ -28,7 +28,7 @@ hide_hero: true
                     {% if p.layout contains 'unterthema' or p.layout == 'untertool' %}
                     {% if p.layout contains 'unterthema' and page.themacontent contains p.themacontent %}
                     <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
-                        {% include unter-thema-teaser-tile.html post=p %}
+                        {% include unter-thema-ideen-teaser-tile.html post=p %}
                     </div>
                     {% endif %}
                     {% if p.layout contains 'untertool' and page.subtool contains p.subtool  %}
