--- a/_includes/tool-teaser-tile.html
+++ b/_includes/tool-teaser-tile.html
@@ -11,7 +11,7 @@
                 {{ post.ws_teaser | remove: '<p>' | remove: '</p>'}}
                 {{ include.post.teaser }}
             </p>
-            <a href="{{ path }}">Zum Tool</a>
+            <a href="{{ path }}">zum Tool</a>
         </div>
     </div>
 </div>
