added some imgs

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,26 +1,26 @@
 <footer>
     <div class="jumbotron fond__white partner">
         <div class="container justify-content-center">
-            <div class="col-lg-12">
+            <div class="col-lg-12 logos-wrap">
 
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 logos">
                     <a href="https://okfn.de/">
-                        <img class="img-responsive logo-okf" src="/static/img/OKFN.png" alt="OKFN Logo"/>
+                        <img class="img-responsive" src="/static/img/OKFN.png" alt="OKFN Logo"/>
                     </a>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 logos">
                     <a href="http://bmfsfj.de/">
-                        <img class="img-responsive logo-bmfsfj" src="/static/img/BMFSFJ.png" alt="BMFSFJ" />
-
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
-                    <a href="https://demokratie-leben.de">
-                        <img class="img-responsive logo-bmfsfj" src="/static/img/foerderzusatz.png" alt="Demokratie leben" />
+                        <img class="img-responsive" src="/static/img/BMFSFJ.png" alt="BMFSFJ" />
                     </a>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 logos">
+                    <a href="https://demokratie-leben.de">
+                        <img class="img-responsive" src="/static/img/foerderzusatz.png" alt="Demokratie leben" />
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 logos">
                     <a href="https://bpb.de">
-                        <img class="img-responsive logo-bmfsfj" src="/static/img/bpb.png" alt="BPB" />
+                        <img class="img-responsive" src="/static/img/bpb.png" alt="BPB" />
                     </a>
                 </div>
             </div>
