--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -256,6 +256,11 @@ a {
   margin: 20px 20px 20px 5px;
 }
 
+.logos{
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+}
 .navbar {
   @extend .fond__white;
 }
