--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,6 +31,7 @@
         <div class="container">
             <div class="row text-uppercase">
                 <div class="col-lg-12">
+                    <a href="/team">Team</a>
                     <a href="/impressum">Impressum</a>
                     <a href="/presse">Presse</a>
                 </div>
