--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,7 @@
 			        <div class="col-lg-6 col-lg-offset-3 blog-main" >
 							{% include post.html %}
 			        <div class="btn-wrap">
-			            <a href="/blog" class="btn btn-start">Zurück zum Blog </a>
+			            <a href="/blog" class="btn btn-start" style="color: white;">Zurück zum Blog </a>
 			        </div>
 			        </div>
 				</div>
