new media and fixed back link

--- a/_layouts/idee.html
+++ b/_layouts/idee.html
@@ -10,7 +10,7 @@ hide_hero: true
         <div class="row">
             <div class="container">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <div class="page-sub-material"><a href="javascript:history.back()"><p class="sub-material-arrow-back"><img src="/static/img/arrow.svg"> Zurück</p></a></div>
+                    <div class="page-sub-material"><a href="./index.html"><p class="sub-material-arrow-back"><img src="/static/img/arrow.svg"> Zurück</p></a></div>
                     <p>💡 Diese Projektidee ist ein Beispiel dafür, wie du ein Thema mit Hilfe eines Tools angehen kannst.<a href="#projektideen"> Diese Themen und Tools setzt du mit der vorliegenden Idee um.</a></p>
                     <hr>
                     <h1 class="section-headline">{{ page.title }}</h1>
