--- a/_layouts/untertool.html
+++ b/_layouts/untertool.html
@@ -10,7 +10,7 @@ hide_hero: true
         <div class="row">
             <div class="container">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <div class="page-sub-material"><a href="javascript:history.back()"><p class="sub-material-arrow-back"><img src="/static/img/arrow.svg"> Zurück</p></a></div>
+                    <div class="page-sub-material"><a href="./index.html"><p class="sub-material-arrow-back"><img src="/static/img/arrow.svg"> Zurück</p></a></div>
                     {% assign flag = false %}
                     {% for p in site.pages %}
                     {% if p.subtool contains page.subtool and p.layout contains 'idee' %}
