--- a/_layouts/untertool.html
+++ b/_layouts/untertool.html
@@ -28,7 +28,7 @@ hide_hero: true
                     </p>
                     {% assign flag = false %}
                     {% for p in site.pages %}
-                    {% if p.subtool contains page.subtool and p.layout contains 'idee' %}
+                    {% if p.subtool == page.subtool and p.layout contains 'idee' %}
                         {% assign flag = true %}
                     {% endif %}
                     {% endfor %}
@@ -42,7 +42,7 @@ hide_hero: true
                 <div class="isotope-wrap">
                     <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
                     {% for p in site.pages %}
-                    {% if p.subtool contains page.subtool and p.layout contains 'idee' %}
+                    {% if p.subtool == page.subtool and p.layout contains 'idee' %}
                         <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser idea">
                             {% include idea-teaser-tile.html post=p %}
                         </div>
