--- a/_layouts/digital-ag.html
+++ b/_layouts/digital-ag.html
@@ -43,7 +43,7 @@
         {% include header-nav.liquid %}
         <div class="row">
             {% if page.hide_hero != true %}
-                <div class="hero-wrap" style="background-image:url({{ page.img_full }});"></div>
+                <div class="fullwidth-image" style="background-image:url({{ page.img_full }});"></div>
             {% endif %}
         </div>
         <div class="beneath-sections jumbotron fond__white">
@@ -53,8 +53,6 @@
                         <h2 class="section-headline">{{ page.title }}</h2>
                     </div>
                 </div>
-            </div>
-            <div class="row">
                 <div class="container text__black">
                     <div class="col-lg-8 col-lg-offset-2">
                         {{ content }}
@@ -64,6 +62,31 @@
         </div>
     </div>
 </div>
+<div class="col-xs-12 fond_red_gradient jumbotron">
+    <div class="row">
+        <div class="container">
+            <div class="col-lg-10 col-lg-offset-1 section-workshop text__white">
+                <h2 class="section-headline">Unsere Digital-Ags</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua
+                </p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="isotope-wrap">
+                <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
+                {% assign sortedLabs = site.labs | sort: 'title' %}
+                {% for lab in sortedLabs %}
+                    {% assign post = lab %}
+                    <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
+                        {% include digital-ag-teaser-tile.html post=post %}
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <footer>
     <div class="jumbotron fond__white partner">
