--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1785,4 +1785,11 @@ footer img {
 
 }
 
-
+.fullwidth-image{
+    width: 100%;
+    height: 70vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+}
