imported scss for the form

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -14,6 +14,7 @@
 @import "../_sass/mobilemenubutton";
 @import "../_sass/pagination";
 @import "../_sass/filter-items";
+@import "../_sass/forms";
 
 /*********************
 RETINA (2x RESOLUTION DEVICES)
