--- a/_includes/add_project.liquid
+++ b/_includes/add_project.liquid
@@ -11,16 +11,16 @@
                    <br>Bitte achte darauf, dass verlinkte Inhalte oder verwendete Tools möglichst unter einer freien Lizenz stehen.</p>
             </div>
             <div class="row content-wrap">
-              <form id="edit-project-form" class="form" method="post" action="{{ site.staticman.server }}/v2/entry/{{ site.staticman.repository }}/{{ site.staticman.branch }}">
+              <form id="edit-project-form" class="form" method="post" action="{{ site.staticman.server }}/v2/entry/{{ site.staticman.repository }}/{{ site.staticman.branch }}/ideas">
 
                 <!-- Random Slug -->
-                <input type="hidden" id="random-slug" name="fields[title]" value="{{ project_random_slug }}" spellcheck="false" {{editable}}/>
+                <input type="hidden" id="random-slug" name="fields[titel]" value="{{ project_random_slug }}" spellcheck="false" {{editable}}/>
                 <input type="hidden" id="random-slug" name="fields[desc2]" value="empty" spellcheck="false" {{editable}}/>
 
                 <!-- Aussagekräftiger Titel -->
                 <fieldset>
                   <label for="project-form-name"><strong>Aussagekräftiger Titel</strong> <span class="required">*</span><br>Bitte gebe deiner Projektidee einen aussagekräftigen Titel. Zur Orientierung schaue dir <a href="/materialsammlung/ideas">bestehende Titel</a> an.</label>
-                  <input type="text" id="project-form-name" name="fields[titel]" value="{{ project_title }}" spellcheck="false" {{editable}}/>
+                  <input type="text" id="project-form-name" name="fields[title]" value="{{ project_title }}" spellcheck="false" {{editable}}/>
                 </fieldset>
 
                 <!-- Zuordnung zu Themen / Tools !!!!!FIX -->
