Add javascript to send new ideas form

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,10 +6,11 @@
 <script src="/static/js/vendor/logger.min.js"></script>
 <script src="/static/js/main.js"></script>
 <script src="/static/js/IsotopeController.js"></script>
-
+{{  page.script }}
 <script>
     jQuery(document).ready(function($) {
         window.controller = new Controller($);
         window.controller.init();
+
     });
 </script>
