--- a/_includes/add_project.liquid
+++ b/_includes/add_project.liquid
@@ -2,16 +2,17 @@
   {% assign redirect = 'https://demokratielabore.de/materialsammlung/ideas/' %}
   {% assign project_title = '' %}
 
+
 <div class="row">
-    <div class="col-xs-12 fond__white jumbotron">
-        <section class="section first white col-xs-24">
-            <div class="content-wrap page-description">
+    <div class="col-xs-12 col-md-8 col-md-offset-2 fond__white jumbotron">
+        <section class="section first content-wrap white col-xs-24">
+            <div class="row col-xs-12 page-description">
                 <h2 class="section-headline">Projektidee hinzufügen</h2>
                 <p>Schön, dass du deine Ideen über die Demokratielabore-Plattform teilen möchtest! Wir freuen uns über Beispiele, wie du selbst oder dir bekannte Projekte die Gesellschaft positiv gestaltet haben.
                    <br>Bitte achte darauf, dass verlinkte Inhalte oder verwendete Tools möglichst unter einer freien Lizenz stehen.</p>
             </div>
-            <div class="row content-wrap">
-              <form id="edit-project-form" class="form" method="post" action="{{ site.staticman.server }}/v2/entry/{{ site.staticman.repository }}/{{ site.staticman.branch }}/ideas">
+            <div class="row col-xs-12 content-wrap">
+              <form id="edit-idea-form" class="form" method="post" action="{{ site.staticman.server }}/v2/entry/{{ site.staticman.repository }}/{{ site.staticman.branch }}/ideas">
 
                 <!-- Random Slug -->
                 <input type="hidden" id="layout" name="fields[layout]" value="idee" spellcheck="false"/>
@@ -145,18 +146,18 @@
                   <button type="submit" id="comment-form-submit" class="edu-btn black">Senden</button>
                 </fieldset>
           </form>
-          <div id="edit-project-form-submit-waiting" style="display: none">
+          <div id="idea-submit-waiting" style="display: none">
               <h3>Wird geladen...</h3>
           </div>
-          <div id="edit-project-form-submit"></div>
-          <div id="project-submit-message" style="display: none">
+          <div id="idea-submit"></div>
+          <div id="idea-submit-message" style="display: none">
             <h2>
-              Vielen Dank! Die Karte wird gespeichert und lässt sich nach der Freigabe unter <font color="red">https://edulabs.de/oer/<span id="random-slug-link"></span></font> bearbeiten <h2>
+              Vielen Dank! Die Idee wird gespeichert und lässt sich nach der Freigabe unter <a href="https://demokratielabore.de/materialsammlung/ideas"><font color="red">https://demokratielabore.de/materialsammlung/ideas</font></a> bearbeiten <h2>
                 <p>
           </div>
-          <div id="oer-card-error" style="display: none">
+          <div id="idea-submit-error" style="display: none">
             <p/>
-            <h2 style="color: red">Beim Absenden deiner Karte ist etwas schiefgelaufen. Bitte versuche es in einer Minute erneut und halte dieses Fenster geöffnet.<h2>
+            <h2 style="color: red">Beim Absenden deiner Idee ist etwas schiefgelaufen. Bitte versuche es in einer Minute erneut und halte dieses Fenster geöffnet.<h2>
           </div>
           <div id="contact-template" style="display: none">
             <label for="project-form-author-name"><strong>Name</strong></label>
